# rigidipy

./: README.md  decomp_list  setup.cfg
.ipynb_checkpoints/: dev-checkpoint.ipynb
src/rigidipy/: rigidipy.py
src/rigidipy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
