[metadata]
name = rigidipy
version = 0.0.1
author = Nick J Fowler
author_email = nickjfowler0@gmail.com
description = Compute protein flexibility from chemical shifts in NEF format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickjf/rigidipy
project_urls =
    Bug Tracker = https://github.com/nickjf/rigidipy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    numpy

include_package_data = True

[options.package_data]
* = *.txt,*.bin
    
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rigidipy = rigidipy.rigidipy:main
